--- a/public/index.html
+++ b/public/index.html
@@ -51,5 +51,8 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
+
+        <!-- Include Payhere JS library as follows -->
+        <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
   </body>
 </html>
